--- a/api/package.json
+++ b/api/package.json
@@ -1,5 +1,13 @@
 {
+  "scripts": {
+    "start": "nodemon index.js"
+  },
   "dependencies": {
-    "express": "^4.18.2"
+    "dotenv": "^16.3.1",
+    "eslint": "^8.44.0",
+    "express": "^4.18.2",
+    "jest": "^29.6.0",
+    "nodemon": "^2.0.22",
+    "postgres": "^3.3.5"
   }
 }
