--- a/api/package.json
+++ b/api/package.json
@@ -1,14 +1,31 @@
 {
-  "type": "module",
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "tsx watch -r dotenv/config index.ts",
+    "introspect": "drizzle-kit introspect:pg --config=drizzle.config.ts",
+    "generate": "drizzle-kit generate:pg --config=drizzle.config.ts",
+    "migrate": "tsx -r dotenv/config db/migrate.ts",
+    "seed": "npx ts-node ./db/seed.ts"
   },
   "dependencies": {
+    "@types/cors": "^2.8.13",
+    "axios": "^1.4.0",
+    "better-sqlite3": "^8.4.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
+    "drizzle-orm": "^0.27.0",
     "eslint": "^8.44.0",
     "express": "^4.18.2",
     "jest": "^29.6.0",
     "nodemon": "^2.0.22",
-    "pg": "^8.11.1"
+    "pg": "^8.11.1",
+    "postgres": "^3.3.5",
+    "typescript": "^5.1.6"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.17",
+    "@types/node": "^20.4.0",
+    "drizzle-kit": "^0.19.3",
+    "ts-node": "^10.9.1",
+    "tsx": "^3.12.7"
   }
 }
