--- a/client/package.json
+++ b/client/package.json
@@ -13,9 +13,10 @@
     "@radix-ui/colors": "^1.0.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@tanstack/react-query": "^4.29.19",
+    "@tanstack/react-query-devtools": "^4.29.19",
+    "axios": "^1.4.0",
     "class-variance-authority": "^0.6.1",
     "clsx": "^1.2.1",
-    "drizzle-orm": "^0.27.0",
     "lucide-react": "^0.258.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
